# dlm_rust

./: Cargo.toml  README.md  run.sh
backend/: Cargo.toml
backend/src/: main.rs
backend/src/features/: download.rs
backend/src/utils/: os_config.rs
cli_client/: Cargo.toml
cli_client/src/: main.rs  tui.rs
client/: Cargo.toml
client/src/: cli.rs  main.rs  tui.rs
server/: Cargo.toml
server/src/: main.rs
server/src/features/: download.rs  mod.rs
server/src/utils/: download_error.rs  mod.rs  util.rs
view/src/: tui.rs
