[workspace]
resolver = "2"
members=["server", "client"]
default-members = ["server"]

[workspace.dependencies]
tokio = {version  = "1.44.1" , features = ["full", "tracing"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }




    