[package]
name = "dlm_client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = { workspace = true }
color-eyre = "0.6.3"
ratatui = "0.29.0"
strum = {version = "0.27.1", features= ["derive"]}
