[package]
name = "doru"
about= "a_cli_based_async_download_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
reqwest = {version = "0.12.14", features= ["stream"]}
tokio = {version  = "1.44.1" , features = ["full"]}
url = "2.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

