[package]
name = "dlm_server"
about= "a_cli_based_async_download_manager"
version = "0.1.0"
edition = "2021"

[build]
rustflags=["--cfg", "tokio-unstable"]

[dependencies]
futures = "0.3.31"
reqwest = {version = "0.12.14", features= ["stream"]}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
url = "2.5.4"


